--- a/app/assets/stylesheets/photos/index.html.css
+++ b/app/assets/stylesheets/photos/index.html.css
@@ -19,9 +19,9 @@
 
 .top-post-wrapper {
   width: 75vw;
-  height: 100%;
+  height: 100vh;
   margin: auto;
-  padding-top: 15vh;
+  padding-top: 5vh;
   /* flex-direction: column; */
   /* position: relative; */
 }
@@ -32,6 +32,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-bottom: 100px;
   box-shadow:
   0 1.9px 2.5px rgba(0, 0, 0, 0.057),
   0 5px 6.1px rgba(0, 0, 0, 0.076),
@@ -41,27 +42,58 @@
   0 101px 74px rgba(0, 0, 0, 0.13);
 }
 
+.post-user-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
 .post-user-header {
   background-color: rgb(242, 240, 240);
   display: flex;
-  justify-content: center;
   align-items: center;
   position: relative;
   width: 100%;
-  height: 10vh;
+  height: calc(100% - 90%);
 }
-.post-user-icon {
+
+.user-icon-container {
+  left: 40px;
+  height: 100%;
+  margin-top: 5px;
   position: absolute;
-  left: 50px;
+}
+
+.post-user-icon {
+  border-radius: 50%;
+  border: solid;
+  height: 60px;
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.photo-user-nickname{
+  text-align: center;
+}
+
+.photo-title{
+  margin: auto;
+  font-size: 20px;
+}
+
+.avatar{
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
 }
 
 /* .post-user-name {
 } */
 
 .post-main-photo {
-  background-color: white;
   width: 100%;
-  height: 100vh;
+  height: calc(100% - 20%);
   display: flex;
   align-items: center;
   position: relative;
@@ -75,18 +107,20 @@
 
 .post-user-main {
   width: 100%;
+  height: 100%;
 }
 
 .user-photo {
   width: 100%;
-  object-fit: cover;
+  height: 100%;
+  object-fit: contain;
 }
 
 
 
 .post-footer-container {
   width: 100%;
-  height: 60px;
+  height: calc(100% - 90%);
   display: flex;
   justify-content: space-around;
   align-items: center;
