--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,7 +1,7 @@
-<div class='top-post-wrapper'>
-  <div class='top-post-container'>
-    <div class='post-user-wrapper'>
-      <div class='post-user-header'>
+<div class='top-post-container'>
+  <div class='post-user-wrapper'>
+    <div class='post-user-header'>
+      <div class='user-icon-container'>
         <div class='post-user-icon'>
           <% if photo.user.avatar.attached?%>
           <%= image_tag user.avater, class:'avatar'%>
@@ -9,47 +9,53 @@
           <%= image_tag ("human.png"), class:'avatar'%>
           <% end %>
         </div>
-        <% if current_user.id == photo.user_id %>
-          <%= photo.user.nickname %>
-        <% else %>
-          <%= link_to photo.user.nickname, user_path(photo.user.id) , class: 'post-user-name'%>
-        <% end %>
-      </div>
 
-      <div class='post-main-photo'>
-
-        <div class='post-user-main'>
-          <%= link_to image_tag(photo.image.variant(resize:'1920x1920').processed, class: 'user-photo'), photo_path(photo.id)%>
+        <div class='photo-user-nickname'>
+          <% if current_user.id == photo.user_id %>
+            <%= photo.user.nickname %>
+          <% else %>
+            <%= link_to photo.user.nickname, user_path(photo.user.id) , class: 'post-user-name'%>
+          <% end %>
         </div>
       </div>
 
-      <div class='post-footer-container'>
-        <div class='post-comment-btn'>
-          <%= link_to image_tag('comment.png', class: 'comment-logo'),user_path(photo.user.id)%>
-          <%= photo.comments.count%>
-        </div>
+      <p class='show-photo-title'><%= photo.title %></p>
 
-        <div id="favos_buttons_<%= photo.id %>">
-          <%= render partial: 'favorites/favo', locals: { photo: photo} %>
-        </div>
+    </div>
 
-        <% if current_user.id == photo.user_id %> 
-          <%= link_to '削除', photo_path(photo.id), method: :delete %>
-        <% end %>
-        <%# <div class='post-user-label'> %>
-          <%# <ul class="more_list"> %>
+    <div class='post-main-photo'>
+
+      <div class='post-user-main'>
+        <%= link_to image_tag(photo.image.variant(resize:'1920x1080').processed, class: 'user-photo'), photo_path(photo.id)%>
+      </div>
+    </div>
+
+    <div class='post-footer-container'>
+      <div class='post-comment-btn'>
+        <%= link_to image_tag('comment.png', class: 'comment-logo'),photo_path(photo.id)%>
+        <%= photo.comments.count%>
+      </div>
+
+      <div id="favos_buttons_<%= photo.id %>">
+        <%= render partial: 'favorites/favo', locals: { photo: photo} %>
+      </div>
+
+      <% if current_user.id == photo.user_id %> 
+        <%= link_to '削除', photo_path(photo.id), method: :delete %>
+      <% end %>
+      <%# <div class='post-user-label'> %>
+        <%# <ul class="more_list"> %>
+          <%# <li> %>
+            <%# <%= link_to '詳細', photo_path(photo.id), method: :get %> 
+          <%# </li> %>
+          <%# <% if user_signed_in? && current_user.id == photo.user_id %> 
             <%# <li> %>
-              <%# <%= link_to '詳細', photo_path(photo.id), method: :get %> 
+              <%# <%= link_to '削除', photo_path(photo.id), method: :delete %> 
             <%# </li> %>
-            <%# <% if user_signed_in? && current_user.id == photo.user_id %> 
-              <%# <li> %>
-                <%# <%= link_to '削除', photo_path(photo.id), method: :delete %> 
-              <%# </li> %>
-            <%# <% end %> 
-          <%# </ul> %>
-        <%# </div> %>
+          <%# <% end %> 
+        <%# </ul> %>
+      <%# </div> %>
 
-      </div>
     </div>
   </div>
 </div>
