--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/top_header'%>
+<%= render 'shared/post_header'%>
 <div class='show-post-wrapper'>
   <div class='top-post-container'>
     <div class='post-user-wrapper'>
