--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/top_header'%>
+<%= render 'shared/post_header'%>
 <div class="search-container">
   <%= form_with(url: search_photos_path, local: true, method: :get, class: "search-form") do |form| %>
     <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
