--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,9 +1,9 @@
-    <% if user_signed_in? && @user != current_user %>
-      <div id="follow_form">
-        <% if current_user.following?(@user) %>
-          <%= render "unfollow" %>
-        <% else %>
-          <%= render "follow" %>
-        <% end %>
-      </div>
+<% if user_signed_in? && user.id != current_user %>
+  <div id="follow_form">
+    <% if current_user.following?(user) %>
+      <%= render "unfollow" %>
+    <% else %>
+      <%= render "follow" %>
     <% end %>
+  </div>
+<% end %>
