--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
-<%= render "shared/sign-up_header"%>
+<%= render "shared/homes_header"%>
 
 <%= form_with model: @user, url: user_registration_path , class: 'registration-main', local: true do |f| %>
-<div class='form-wrap'>
+<div class='sign-up-wrapper'>
   <div class='form-header'>
     <h1 class='form-header-text'>
       会員情報入力
