userモデルにavatarを保存できるように記述

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,9 +18,9 @@
     <p class="edit-avatar-text">
       クリックして写真をアップロード
     </p>
-    <%# <div class="edit-avatar-upload">
+    <div class="edit-avatar-upload">
       <%= f.file_field :avatar, class: 'edit-avatar'%>
-    <%# </div>  %>
+     </div> 
     <div class="edit-profile-container">
       <%= f.text_area :profile, class: 'edit-profile'%>
     </div>
