--- a/app/assets/stylesheets/photos/show.html.css
+++ b/app/assets/stylesheets/photos/show.html.css
@@ -3,50 +3,44 @@
   height: 95vh;
   margin: auto;
   padding-top: 15vh;
-  background-color: blueviolet;
 }
 
 .show-map-container{
   width: 100%;
   height: calc(100% - 50%);
   margin: 30px 0px;
-  background-color: brown;
 }
 
 .comments-send-container{
   width: 100%;
   height: calc(100% - 90%);
   margin-bottom: 30px;
-  background-color: cadetblue;
   display: flex;
 }
 
 .comments-table-container{
   width: 100%;
   height: calc(100% - 50%);
-  background-color: cyan;
+  background-color:gainsboro;
   margin-bottom: 30px;
   overflow: auto;
+  border: 2px solid;
+  border-radius: 8px;
 }
 
 .comment-table-container{
   display: flex;
-  width: 100%;
-  height: calc(100% - 94%);
-  border-radius: 8px;
   margin: 20px 0px;
 }
 
 .comment-table-nickname{
-  width: calc(100% - 95%);
   height: 100%;
   margin-left: 10px;
 }
 
 .comment-table-text{
-  height: 100%;
   margin-right: 10px;
-  
+  word-break: break-all;
 }
 
 .show-photo-title{
@@ -57,7 +51,6 @@
 }
 
 .comments-text-area{
-  background-color: darkcyan;
   width: calc(100% - 20%);
   height: 100%;
 }
