--- a/app/assets/stylesheets/photos/show.html.css
+++ b/app/assets/stylesheets/photos/show.html.css
@@ -8,24 +8,39 @@
 .show-map-container{
   width: 100%;
   height: calc(100% - 50%);
-  margin: 30px 0px;
+  margin-top: 30px;
+}
+
+.explanation-container{
+  width: 100%;
+  max-height: calc(100% - 80%);
+  margin-top: 30px;
+  background-color: gainsboro;
+  border: 2px solid;
+  border-radius: 8px;
+}
+
+.explanation-text{
+  padding: 20px 0px;
+  padding-left: 20px;
+  word-break: break-all;
 }
 
 .comments-send-container{
   width: 100%;
   height: calc(100% - 90%);
-  margin-bottom: 30px;
+  margin: 30px 0px;
   display: flex;
 }
 
 .comments-table-container{
   width: 100%;
-  height: calc(100% - 50%);
+  max-height: calc(100% - 50%);
   background-color:gainsboro;
-  margin-bottom: 30px;
   overflow: auto;
   border: 2px solid;
   border-radius: 8px;
+  margin-top: 30px;
 }
 
 .comment-table-container{
