--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -48,84 +48,67 @@
   </div>
 
   <div class='show-map-container'>
-    <h2>gmap</h2>
+    <div class ='photo-map'>
+          <h2>gmap</h2>
 
-    <!-- 地名入力用のinputを追加 -->
-    <input id="address" type="textbox" value="東京スカイツリー">
+          <!-- 地名入力用のinputを追加 -->
+          <input id="address" type="textbox" value="東京スカイツリー">
 
-    <!-- buttonをクリックしたらcodeAddressを実行-->
-    <input type="button" value="Encode" onclick="codeAddress()">
-    <div id='map'>
-    </div>
-
-    <style>
-    #map{
-      height: 300px;
-    }
-    </style>
-
-    <script>
-    /*
-    mapを関数の外で定義(codeAddressでも使うため)
-    geocoderを用意
-    */
-
-    let map
-    let geocoder
-
-    function initMap(){
-      // geocoderを初期化
-      geocoder = new google.maps.Geocoder()
-
-      map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: 35.710063, lng: 139.810700},
-      zoom: 8
-      });
-    }
-
-    function codeAddress(){
-      // 入力を取得
-      let inputAddress = document.getElementById('address').value;
-
-      // geocodingしたあとmapを移動
-      geocoder.geocode( { 'address': inputAddress}, function(results, status) {
-        if (status == 'OK') {
-    // map.setCenterで地図が移動
-          map.setCenter(results[0].geometry.location);
-
-    // google.maps.MarkerでGoogleMap上の指定位置にマーカが立つ
-          var marker = new google.maps.Marker({
-              map: map,
-              position: results[0].geometry.location
-          });
-        } else {
-          alert('Geocode was not successful for the following reason: ' + status);
-        }
-      });
-    }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
-  </div>
-  
-  <div class='comments-table-container'>
-    <% if @comments %>
-      <% @comments.each do |comment|%>
-        <% if current_user.id == comment.user_id%>
-          <div class='comment-table-container'>
-            <strong class='comment-table-nickname'><%= comment.user.nickname %>:</strong>
-            <p class='comment-table-text'>
-              <%= comment.text %>
-            </p>
+          <!-- buttonをクリックしたらcodeAddressを実行-->
+          <input type="button" value="Encode" onclick="codeAddress()">
+          <div id='map'>
           </div>
-        <% else %>
-          <p class='comment-table-container'>
-            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>:<strong>
-            <%= comment.text %>
-          </p>
-        <% end %>
-      <%end%>
-    <%end%>
-  </div>
+
+          <style>
+          #map{
+            height: 300px;
+          }
+          </style>
+
+          <script>
+          /*
+          mapを関数の外で定義(codeAddressでも使うため)
+          geocoderを用意
+          */
+
+          let map
+          let geocoder
+
+          function initMap(){
+            // geocoderを初期化
+            geocoder = new google.maps.Geocoder()
+
+            map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: "@photo.latitude", lng: "@photo.longitude"},
+
+            zoom: 8
+            });
+          }
+
+          function codeAddress(){
+            // 入力を取得
+            let inputAddress = document.getElementById('address').value;
+
+            // geocodingしたあとmapを移動
+            geocoder.geocode( { 'address': inputAddress}, function(results, status) {
+              if (status == 'OK') {
+          // map.setCenterで地図が移動
+                map.setCenter(results[0].geometry.location);
+
+          // google.maps.MarkerでGoogleMap上の指定位置にマーカが立つ
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: results[0].geometry.location
+                });
+              } else {
+                alert('Geocode was not successful for the following reason: ' + status);
+              }
+            });
+          }
+          </script>
+          <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
+        </div>
+      </div>
 
   <%= form_with(model: [@photo, @comment], local: true, class: 'comments-send-container') do |form| %>
     <%= form.text_area :text, placeholder: "投稿者にコメントを送ってみよう！", class: 'comments-text-area'%>
