--- a/app/assets/stylesheets/photos/index.html.css
+++ b/app/assets/stylesheets/photos/index.html.css
@@ -87,9 +87,16 @@
 }
 
 .avatar{
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   object-fit: contain;
+}
+
+.photo-avatar{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
 /* .post-user-name {
