--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,7 +22,7 @@
       <%= f.file_field :avatar, class: 'edit-avatar'%>
      </div> 
     <div class="edit-profile-container">
-      <%= f.text_area :profile, class: 'edit-profile'%>
+      <%= f.text_area :profile, class: 'edit-profile', placeholder: "プロフィールを編集してみよう！"%>
     </div>
 
     <div class='post-new-btn'>
