--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -37,7 +37,7 @@
   <div class='accbox'>
       <!--ラベル1-->
     <label for="label1">
-      <%= image_tag 'setting.png' %>
+      <%= image_tag 'setting.png', class: 'accbox-image'%>
     </label>
     <input type="checkbox" id="label1" class="cssacc" />
     <div class="accshow">
