--- a/app/assets/stylesheets/user/mypage.css
+++ b/app/assets/stylesheets/user/mypage.css
@@ -36,7 +36,6 @@
   height: calc(100% - 10%);
   display: flex;
   align-items: center;
-
 }
 
 .user-profile-text {
@@ -84,4 +83,11 @@
   padding: 5px;
   background: #eaeaea;
   opacity: 1;
+}
+
+.mypage-avatar{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid;
 }
