--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -8,7 +8,7 @@
             <% if @photo.user.avatar.attached?%>
             <%= image_tag @photo.user.avatar, class:'avatar'%>
             <%else%>
-            <%= image_tag ("human.png"), class:'avatar'%>
+            <%= image_tag ("avatar.png"), class:'avatar'%>
             <% end %>
           </div>
 
