--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
       <% if @user.avatar.attached?%>
         <%= image_tag @user.avatar, class:'avatar'%>
       <%else%>
-        <%= image_tag ("human.png"), class:'avatar'%>
+        <%= image_tag ("avatar.png"), class:'avatar'%>
       <% end %>
     </div>
     <div class='user-header-profile'>
