indexファイルとcssファイルを作成

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/homes_header"%>
+<%= render "homes_header"%>
 <div class='homes-wrapper'>
-  <%= image_tag ('home.photo.JPG'), class: 'home-photo'%>
+  <%= image_tag ('home.photo.jpg'), class: 'home-photo'%>
 </div>
