--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,7 @@
 <%= render "homes_header"%>
 <div class='homes-wrapper'>
   <%= image_tag ('home.photo.jpg'), class: 'home-photo'%>
+  <h1 class='catch-copy'>
+    撮った場所をササっと共有しよう！
+  </h1>
 </div>
