--- a/app/assets/stylesheets/homes/index.css
+++ b/app/assets/stylesheets/homes/index.css
@@ -1,10 +1,31 @@
 .homes-wrapper{
   width: 100vw;
-  height: 100vh;
+  height: 100vh;;
 }
 
 .home-photo{
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.home-photo img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  position: absolute;
+}
+
+.home-photo p{
+  position: absolute;
+  top: 150px;
+  left: 100px;
+  color: white;
+  font-size: 130px;
+  font-weight: bolder;
+}
+
+.home-photo span{
+  color: red;
+  margin-left: 100px;
 }
