--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,9 @@
 <%= render "homes_header"%>
 <div class='homes-wrapper'>
-  <%= image_tag asset_path('home.photo.jpg'), class: 'home-photo'%>
-  <h1 class='catch-copy'>
-    撮った場所をササっと共有しよう！
-  </h1>
+  <div class='home-photo'>
+    <%= image_tag ('photo.JPG')%>
+    <p>
+      あの場所で<br><span> 写真</span>を撮ろう。
+    </p>
+  </div>
 </div>
