--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,7 @@
 <%= render "homes_header"%>
 <div class='homes-wrapper'>
   <div class='home-photo'>
-    <%= image_tag  asset_path('photo.JPG')%>
+    <%= image_tag 'photo.JPG'%>
     <p>
       あの場所で<br><span> 写真</span>を撮ろう。
     </p>
