写真を変更

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -7,3 +7,17 @@
     </p>
   </div>
 </div>
+
+<div class='explanation-wrapper'>
+  <%= image_tag 'Photoroke_logo.svg'%>
+  <p>photoロケとは？</p>
+  <div class='explanation-container'>
+    <%= image_tag class: 'map-illustration'%>
+    <p class='explanation-text'>
+      photoロケとは、写真と撮影した場所を共有できるアプリです。
+    </p>
+    <%= image_tag class: 'photo-illustration'%>
+  </div>
+  
+
+</div>
