--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -7,3 +7,21 @@
     </p>
   </div>
 </div>
+
+<div class='explanation-wrapper'>
+  <%= image_tag ('Photoroke_logo.svg'), class: 'photo-roke-img'%>
+  <p class='photo-roke-text'>とは？</p>
+  <div class='photoroke-explanation-container'>
+    <div class='map-illustration-container'>
+      <%= image_tag ('japan.png'), class: 'map-illustration'%>
+    </div>
+    <p class='explanation-text'>
+      photoロケとは、写真と撮影した場所を共有できるアプリです。
+    </p>
+    <div class='photo-illustration-container'>
+      <%= image_tag ('cameraman.JPG'), class: 'photo-illustration'%>
+    </div>
+  </div>
+  
+
+</div>
