cammeramanの写真を変更

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -15,7 +15,7 @@
     <div class='map-illustration-container'>
       <%= image_tag ('japan.png'), class: 'map-illustration'%>
     </div>
-    <p class='explanation-text'>
+    <p class='exp-text'>
       photoロケとは、写真と撮影した場所を共有できるアプリです。
     </p>
     <div class='photo-illustration-container'>
