背景画像が表示されるようにindex.html.erbを記述

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -9,19 +9,21 @@
 </div>
 
 <div class='explanation-wrapper'>
-  <%= image_tag ('Photoroke_logo.svg'), class: 'photo-roke-img'%>
-  <p class='photo-roke-text'>とは？</p>
-  <div class='photoroke-explanation-container'>
-    <div class='map-illustration-container'>
-      <%= image_tag ('japan.png'), class: 'map-illustration'%>
-    </div>
-    <p class='exp-text'>
-      photoロケとは、写真と撮影した場所を共有できるアプリです。
-    </p>
-    <div class='photo-illustration-container'>
-      <%= image_tag ('cameraman.JPG'), class: 'photo-illustration'%>
-    </div>
+  <div class='msk'>
+    <%# <div class='second-container'> %>
+      <%#= image_tag ('Photoroke_logo.svg'), class: 'photo-roke-img'%>
+      <%# <p class='photo-roke-text'>とは？</p> %>
+      <%# <p class='exp-text'> %>
+        <%# 撮影した場所と写真を共有できるアプリです。 %>
+      <%# </p> %>
+      <%# <div class='photoroke-explanation-container'> %>
+        <%# <div class='map-illustration-container'> %>
+          <%#= image_tag ('map.png'), class: 'map-illustration'%>
+        <%# </div> %>
+        <%# <div class='photo-illustration-container'> %>
+          <%#= image_tag ('cameraman.JPG'), class: 'photo-illustration'%>
+        <%# </div> %>
+      <%# </div> %>
+    <%# </div> %>
   </div>
-  
-
 </div>
