緯度経度のコメントアウトを修正

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -89,10 +89,10 @@
                 現在位置を取得する
             </div>
         </div>
-        <%# <div class="txt-margin"> %>
-            <%# <p>緯度：<span id="latitude">text</span><span>度</span></p> %>
-            <%# <p>経度：<span id="longitude">???</span><span>度</span></p> %>
-        <%# </div> %>
+        <div class="txt-margin">
+            <p>緯度：<span id="latitude">text</span><span>度</span></p>
+            <p>経度：<span id="longitude">???</span><span>度</span></p>
+        </div>
       </div>
       <%= javascript_pack_tag 'photo/new' %>
     </div>
