空のコミット

--- a/app/assets/stylesheets/homes/index.css.erb
+++ b/app/assets/stylesheets/homes/index.css.erb
@@ -1,4 +1,4 @@
 
 .explanation-wrapper{
   <%# background-image: image-url("images/second_photo.JPG"); %>
-  background-image: url(<%= asset_path('second_photo.JPG') %>);
+  background-image: url(<%= asset_path('second_photo.JPG') %>}
