photo_rokeの写真をSVGからPNGに変更

--- a/app/views/homes/_homes_header.html.erb
+++ b/app/views/homes/_homes_header.html.erb
@@ -3,7 +3,7 @@
   <%#ロゴの情報が入る%>
   <div class='photoroke-icon'>
     <a href="/">
-      <img class='photoroke-icon-photo'src="/assets/Photoroke_logo.svg">
+      <img class='photoroke-icon-photo'src="photo_roke64.png">
     </a>
   </div>
 
