--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -11,7 +11,7 @@
 <div class='explanation-wrapper'>
   <div class='msk'>
     <div class='second-container'>
-      <%= image_tag ('Photoroke_logo.svg'), class: 'photo-roke-img'%>
+      <%= image_tag ('photo_roke256.png'), class: 'photo-roke-img'%>
       <p class='photo-roke-text'>とは？</p>
       <p class='exp-text'>
         撮影した場所と写真を共有できるアプリです。
