--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -11,7 +11,9 @@
 <div class='explanation-wrapper'>
   <div class='msk'>
     <div class='second-container'>
-      <%= image_tag ('photo_roke256.png'), class: 'photo-roke-img'%>
+      <div class='photo-roke-img'>
+        <%= image_tag ('photo_roke256.png') %>
+      </div>
       <p class='photo-roke-text'>とは？</p>
       <p class='exp-text'>
         撮影した場所と写真を共有できるアプリです。
