--- a/app/views/shared/_edit_header.html.erb
+++ b/app/views/shared/_edit_header.html.erb
@@ -2,9 +2,7 @@
 
   <%#ロゴの情報が入る%>
   <div class='photoroke-icon'>
-    <a href="/">
-      <img class='photoroke-icon-photo'src="/assets/Photoroke_logo.svg">
-    </a>
+    <%= link_to image_tag('photo_roke64.png', class: 'photoroke-icon-photo'), root_path %>
   </div>
 
 <%#ページの名前が入る%>
