--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -37,21 +37,20 @@
 
 .post-photo-item {
 width: 100%;
-height: 100%;
-top: 150px;
+height: calc(100% - 30%);
 align-items: center;
 justify-content: center;
-margin: 7vh 0px;
+margin-bottom: 7vh;
 }
 
 .post-photo-upload{
-  height: calc(100% - 20%);
+  height: calc(100% - 90%);
   text-align: center;
   margin-bottom: 20px;
 }
 
 .image-list{
-  height: calc(100% - 80%);
+  height: calc(100% - 10%);
   box-shadow:
   0 1.9px 2.5px rgba(0, 0, 0, 0.057),
   0 5px 6.1px rgba(0, 0, 0, 0.076),
@@ -61,8 +60,17 @@ margin: 7vh 0px;
   0 101px 74px rgba(0, 0, 0, 0.13);
 }
 
-.view-container{
+.new-post-wrapper form{
+  width: 100%;
   height: 100%;
+}
+
+.view-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .view-image{
