現在地の取得を行うと地図が移動しピンを打つ様に記述

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -85,12 +85,16 @@
 
       <div class="center">
         <div class="btn-margin">
-            <div id="get-position-btn" class="btn btn-outline-primary btn-lg">
-                現在位置を取得する
-            </div>
+          <button id="get-position-btn" class="btn btn-outline-primary btn-lg">
+              現在位置を取得する
+          </button>
+
+            <%# <div id="get-position-btn" class="btn btn-outline-primary btn-lg"> %>
+                <%# 現在位置を取得する %>
+            <%# </div> %>
         </div>
         <div class="txt-margin">
-            <p>緯度：<span id="latitude">text</span><span>度</span></p>
+            <p>緯度：<span id="latitude">???</span><span>度</span></p>
             <p>経度：<span id="longitude">???</span><span>度</span></p>
         </div>
       </div>
