現在地取得のbtnが投稿ボタンと同時に動作してしまう問題を解決

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -85,7 +85,7 @@
 
       <div class="center">
         <div class="btn-margin">
-          <button id="get-position-btn" class="btn btn-outline-primary btn-lg">
+          <button id="get-position-btn" class="btn btn-outline-primary btn-lg" type="button">
               現在位置を取得する
           </button>
 
