--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -43,7 +43,7 @@
 
   <div class='explanation-container'>
     <p class="explanation-text">
-      <%= @photo.explanation %>
+      <%= @photo.user.nickname %>:<%= @photo.explanation %>
     </p>
   </div>
 
@@ -79,7 +79,7 @@
             geocoder = new google.maps.Geocoder()
 
             map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: "@photo.latitude", lng: "@photo.longitude"},
+            center: {lat: 35.710063, lng: 139.810700},
 
             zoom: 8
             });
