--- a/app/assets/stylesheets/photos/show.html.css
+++ b/app/assets/stylesheets/photos/show.html.css
@@ -1,14 +1,23 @@
-.show-post-wrapper{
+.first-show-container{
   width: 75vw;
-  height: 95vh;
+  height: 90vh;
   margin: auto;
-  padding-top: 15vh;
+  padding-top: 10vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.057), 0 5px 6.1px rgba(0, 0, 0, 0.076), 0 10.1px 11.4px rgba(0, 0, 0, 0.086), 0 19.2px 19.8px rgba(0, 0, 0, 0.092), 0 38.4px 34.8px rgba(0, 0, 0, 0.1), 0 101px 74px rgba(0, 0, 0, 0.13);
 }
 
 .show-map-container{
   width: 100%;
-  height: calc(100% - 50%);
   margin-top: 30px;
+}
+
+.second-show-container{
+  width: 75vw;
+  height: 100vh;
+  margin: auto;
 }
 
 .explanation-container{
