投稿一覧のレスポンシブ完了

--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -124,3 +124,51 @@ margin: 7vh 0px;
   height: 0px;
   border: none;
 }
+
+/* 600px〜959px：タブレット
+------------------------------ */
+@media screen and (min-width:600px) and (max-width:959px) {
+ 
+ 
+}
+ 
+ 
+/* 480px〜599px：SP横
+------------------------------ */
+@media screen and (min-width:480px) and (max-width:599px) { 
+ 
+ 
+}
+ 
+ 
+/* 〜479px：スマートフォン縦
+------------------------------ */
+@media screen and (max-width:479px) { 
+ .new-post-wrapper{
+   width: 95vw;
+   padding-top: 5vh;
+ }
+
+ .photo-title-container{
+   margin: 20px 0px;
+ }
+ 
+ .photo-title{
+   width: 100%;
+ }
+
+ .post-new-btn{
+   margin-bottom: 4vh;
+ }
+
+ .post-photo-item{
+   height: 50%;
+ }
+
+ .post-photo-upload{
+   margin-bottom: 10px;
+ }
+ 
+
+
+}
