--- a/app/assets/stylesheets/photos/index.html.css
+++ b/app/assets/stylesheets/photos/index.html.css
@@ -161,3 +161,60 @@
 .purchase-btn-icon {
   width: 60%;
 }
+
+/* 600px〜959px：タブレット
+------------------------------ */
+@media screen and (min-width:600px) and (max-width:959px) {
+ 
+ 
+}
+ 
+ 
+/* 480px〜599px：SP横
+------------------------------ */
+@media screen and (min-width:480px) and (max-width:599px) { 
+ 
+ 
+}
+ 
+ 
+/* 〜479px：スマートフォン縦
+------------------------------ */
+@media screen and (max-width:479px) { 
+ .purchase-btn{
+ right: 4px;
+ bottom: 10%;
+ width: 13vw;
+ }
+ 
+ .purchase-btn-text{
+   display: none;
+ }
+ .purchase-btn-icon{
+   width: 100%;
+ }
+
+ .search-container{
+   padding-top: 10vh;
+ }
+
+ .top-post-wrapper{
+   height: 70vh;
+ }
+
+ .photo-user-nickname{
+   display: none;
+ }
+
+ .user-icon-container{
+   margin-top: initial;
+   width: initial;
+ }
+
+ .post-user-icon{
+   width: 50px;
+   height: 50px;
+ }
+
+ 
+}
