--- a/app/assets/stylesheets/shared/sign-up_header.css
+++ b/app/assets/stylesheets/shared/sign-up_header.css
@@ -41,3 +41,39 @@
   background: #ffc25c;
   color: #FFF;
 }
+
+.sign-up-wrapper{
+  width: 75vw;
+  height: 100vh;
+  padding-top: 10vh;
+}
+
+
+/* 600px〜959px：タブレット
+------------------------------ */
+@media screen and (min-width:600px) and (max-width:959px) {
+ 
+ 
+}
+ 
+ 
+/* 480px〜599px：SP横
+------------------------------ */
+@media screen and (min-width:480px) and (max-width:599px) { 
+ 
+ 
+}
+ 
+ 
+/* 〜479px：スマートフォン縦
+------------------------------ */
+@media screen and (max-width:479px) { 
+  .top-page-name{
+    display: none;
+  }
+
+  .sign-up-wrapper{
+    width: 100%;
+    height: 100%;
+  }
+}
