--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/edit_header"%>
+<%= render "shared/post_header"%>
 <%= javascript_pack_tag 'registrations/preview' %>
 
 <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
